--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,12 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
 
+
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.google.android.gms:play-services-appindexing:9.2.1'
     compile 'com.google.android.gms:play-services-location:9.2.1'
-
 }
