--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -32,4 +33,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.2.1'
     compile 'com.google.android.gms:play-services-appindexing:9.2.1'
     compile 'com.google.android.gms:play-services-location:9.2.1'
+    compile 'com.android.support:multidex:1.0.1'
 }
