--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,13 @@ dependencies {
 
 
 
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.google.android.gms:play-services:9.2.1'
-    compile 'com.google.android.gms:play-services-appindexing:9.2.1'
-    compile 'com.google.android.gms:play-services-location:9.2.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.google.android.gms:play-services-appindexing:9.4.0'
+    compile 'com.google.android.gms:play-services-location:9.4.0'
     compile 'com.android.support:multidex:1.0.1'
 }
