--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".WelcomeActivity"
             android:label="@string/app_name"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name="in.yousee.theadmin.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
