--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,12 @@
             android:label="@string/app_name">
 
         </activity>
+        <activity
+            android:name="in.yousee.theadmin.RetryActivity"
+            android:configChanges="orientation"
+            android:label="@string/title_activity_retry"
+            android:theme="@style/Theme.AppCompat.Dialog" >
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
